# lotispro

./: .gitattributes  .gitignore  CLAUDE.md  landing.html  test_meta.csv
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  AI_ASSISTANT_DOCKER.md  Dockerfile  alembic.ini  db.py  docker-compose.supabase.yml  docker-compose.yml  entrypoint.sh  lots.db  main.py  pyproject.toml  railway.toml  requirements.txt  seed_users.py
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_ai_conversations.py  0003_add_language_status_to_ai_conversations.py  0004_lot_status_workflow_redesign.py  0005_add_price_per_sqm_to_lots.py  0006_add_sale_price_and_promotion_to_reservations.py  0007_add_refund_payment_type_to_reservations.py  0008_add_wants_notaire_to_reservations.py  0009_add_lot_documents.py  0010_add_notaires_table.py  0011_add_project_financing_plans.py  0012_add_delivery_date_to_projects.py  0013_add_lot_pricing_configs.py  0014_add_price_per_sqm_acte_to_lots.py  001_add_lot_metadata_fields.py  089b9494afe9_add_payment_schedules_and_installments.py  684589f25b1f_initial_schema_for_supabase.py  6f25fe56abef_add_geojson_file_url_to_projects.py  a1b2c3d4e5f6_add_manager_profile_fields_to_users.py  bff6f4db3ded_add_balance_delay_months_to_payment_.py  d1e2f3a4b5c6_add_deposit_date_and_client_address.py  e2f3a4b5c6d7_add_deposit_refund_to_reservations.py  f3a4b5c6d7e8_add_image_url_to_projects.py  g4b5c6d7e8f9_add_validated_reservation_status.py  h5c6d7e8f9a0_add_invitation_fields_to_users.py  seed_admin_user.py
backend/app/: __init__.py  main.py
backend/app/ai_assistant/: README.md  __init__.py  config.py  context.py  dependencies.py  router.py  schemas.py  service.py
backend/app/ai_assistant/agents/: __init__.py  business_analyst.py  data_fetcher.py  orchestrator.py
backend/app/ai_assistant/tools/: __init__.py  analysis_tools.py  database_tools.py  export_tools.py  search_tools.py  security.py  visualization_tools.py
backend/app/api/: dependencies.py  error_handlers.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: audit.py  auth.py  clients.py  contact.py  dashboard.py  documents.py  health.py  lot_pricing_configs.py  lot_transitions.py  lots.py  notaires.py  payments.py  projects.py  reservations.py  sales.py  users.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  middlewares.py  security.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  client.py  lot.py  project.py  reservation.py  sale.py  user.py
backend/app/domain/interfaces/: __init__.py  repositories.py
backend/app/domain/schemas/: __init__.py  client.py  common.py  dashboard.py  document.py  geojson.py  lot.py  lot_pricing.py  notaire.py  payment.py  project.py  reservation.py  sale.py  user.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/database/: __init__.py  models.py  session.py
backend/app/infrastructure/database/repositories/: __init__.py  audit_repository.py  base.py  client_repository.py  lot_document_repository.py  lot_pricing_repository.py  lot_repository.py  notaire_repository.py  payment_repository.py  project_repository.py  reservation_repository.py  sale_repository.py  user_repository.py
backend/app/infrastructure/storage/: supabase_storage.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  certificate_service.py  client_service.py  dashboard_service.py  document_service.py  email_service.py  lot_pricing_service.py  lot_service.py  notaire_service.py  payment_service.py  project_service.py  reservation_service.py  sale_service.py  user_service.py
backend/app/tests/: __init__.py  conftest.py
backend/app/tests/integration/test_api/: test_auth.py
backend/app/tests/unit/test_domain/: test_security.py
backend/data/: Financement.xlsx  Liste des lots.xlsx  liste_des_lots.csv  project_2.geojson  project_3.geojson  project_4.geojson
backend/scripts/: create_admin.py
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json
frontend/public/: launch-strategy.md
frontend/src/: App.jsx  index.css  landing.css  main.jsx  styles.css
frontend/src/components/: AssignCommercialsModal.jsx  ClientDetailPage.jsx  ClientsPage.jsx  CommercialsPage.jsx  ContactPage.jsx  CreateProjectModal.jsx  Dashboard.jsx  ErrorBoundary.jsx  ForgotPassword.jsx  GlobalDashboard.jsx  HistoryPage.jsx  LandingPage.jsx  Login.jsx  LotDetailModal.jsx  LotPricingConfigPanel.jsx  ManagersPage.jsx  ProjectDetailPage.jsx  ProjectsPage.jsx  ProtectedRoute.jsx  SetPassword.jsx  UploadGeojsonModal.jsx  UploadProjectImageModal.jsx
frontend/src/contexts/: AuthContext.jsx  ToastContext.jsx
frontend/src/hooks/: useTheme.js
frontend/src/services/: api.js
frontend/src/utils/: api.js  config.js  constants.js  formatters.js
supabase/: config.toml
(+9 files in other folders)
